--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cv",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://rtorrescano.github.io/cvfrontreact/",
+  "homepage":"https://rtorrescano.github.io/cvfront/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
