--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "cv",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://rtorrescano.github.io/cvfront/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
@@ -23,9 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
